Project - README.md - Added section about Java 9+ log warnings